# test-data-plateform

./: .gitignore  README.md  main.py  pyproject.toml
configs/: metaflow_gcp.yaml  stac_collection.json
metaflow_flows/: flows_utils.py  sentinel2_ingestion_flow.py
scripts/db/: init-pgstac.sh  init-postgres.sh
src/data_ingestion/geodata/: download_utils.py  geodata_downloader.py
src/data_ingestion/metadata/: manager.py
src/data_ingestion/stac_clients/: __init__.py  base.py  element84.py  planetary.py
src/storage/: gcs_utils.py  local_utils.py  postgis_utils.py
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
terraform/.terraform/modules/: modules.json
terraform/kubernetes/: cloudsql-auth-proxy.yaml
terraform/postgis/: main.tf  variables.tf
terraform/postgres_vms/: install_pgstac.sh  install_postgres.sh  main.tf  outputs.tf  variables.tf
